--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="d-flex flex-column h-100">
- 
+<!--NAV-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">App Name</a>
@@ -47,6 +47,7 @@
     </div>
 </nav>
 
+<!--MAIN-->
     <main class="flex-shrink-0">
        <div class="container">
            <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
@@ -54,9 +55,16 @@
        </div>
     </main>
 
+<!--FOOTER-->
     <footer class="footer mt-auto py-3 bg-light sticky-footer">
-        <div class="container-fluid text-center">
-            <span class="text-muted">Place sticky footer content here.</span>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div><span class="text-muted">&copy;2021</span>Michael Loerop | Mike@email.com</div>
+                </div>
+                <div class="col"><img src="" alt=""></div>
+                
+            </div>
         </div>
     </footer>
 
