--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <!--MAIN-->
     <main class="flex-shrink-0">
        <div class="container">
-           <h1 class="mt-5">Template with dark fixed navbar and sticky footer</h1>
-           <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
+           <h1 class="display-5 fw-bold lh-1 mb-3">App Name: A Coding Project</h1>
+            <div class="col"><img src="" alt="" class="img-fluid center-block d-block mx-auto" alt="App Logo"></div>
        </div>
     </main>
 
@@ -59,11 +59,9 @@
     <footer class="footer mt-auto py-3 bg-light sticky-footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col">
-                    <div><span class="text-muted">&copy;2021</span>Michael Loerop | Mike@email.com</div>
-                </div>
-                <div class="col"><img src="" alt=""></div>
-                
+                <div class="col text-center">
+                    <div><span class="text-muted ">&copy;2021</span>Michael Loerop | Mike@email.com</div>
+                </div>  
             </div>
         </div>
     </footer>
