--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-   <!-- External CSS-->
-   <link rel="stylesheet" href="css/site.css">
-
+    <link href="/css/site.css" rel="stylesheet">
+    
 </head>
 
 <body class="d-flex flex-column h-100">
-<!--NAV-->
+
+<!-- Navbar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">App Name</a>
+        <a class="navbar-brand" href="#">APP NAME</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,46 +31,42 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="app.html">App</a>
+                    <a class="nav-link" href="app.html">The App</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="code.html">Code</a>
+                    <a class="nav-link" href="code.html">The Code</a>
                 </li>
+                
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">Github</a>
+                    <a class="nav-link" href="#" target="_blank" >Github</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!--MAIN-->
+    <!-- Main -->
     <main class="flex-shrink-0">
        <div class="container">
-           <h1 class="display-5 fw-bold lh-1 mb-3">App Name: A Coding Project</h1>
-            <div class="col"><img src="" alt="" class="img-fluid center-block d-block mx-auto" alt="App Logo"></div>
+           <h1 class="mt-5">Template with fixed navbar and sticky footer</h1>
+           <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added with padding-top: 60px; on the main > .container.</p>
        </div>
     </main>
 
-<!--FOOTER-->
-    <footer class="footer mt-auto py-3 bg-light sticky-footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col text-center">
-                    <div><span class="text-muted ">&copy;2021</span> Michael Loerop | Mike@email.com</div>
-                </div>  
-            </div>
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 bg-dark sticky-footer">
+        <div class="container-fluid text-center">
+            <span class="text-light">Place sticky footer content here.</span>
         </div>
+        <div class="text-center"><a href="#">About Me | Michael Loerop</a></div>
     </footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
-    <script src="js/site.js"></script>
+    <script src="/js/site.js"></script>
+
 </body>
- 
+
 </html>
