Overwrite with Looper to make new template

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Michael Loerop</title>
+    <title>Looper: A Coding Project By Michael Loerop</title>
+    <link rel="icon" type="image/x-icon" href="/img/Mike-Loerop-Logo-Favicon.png">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +23,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">APP NAME</a>
+        <a class="navbar-brand" href="index.html"><img src="/img/Looper-Logo-white.png" alt="Looper Logo" height="20px" class="d-flex "></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,14 +34,14 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="app.html">The App</a>
+                    <a class="nav-link" href="app.html">Run</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="code.html">The Code</a>
+                    <a class="nav-link" href="code.html">Code</a>
                 </li>
                 
                 <li class="nav-item">
-                    <a class="nav-link" href="#" target="_blank" >Github</a>
+                    <a class="nav-link" href="https://github.com/MikeLoerop/Javascript_Looper" target="_blank" >Github</a>
                 </li>
             </ul>
         </div>
@@ -50,20 +51,48 @@
     <!-- Main-->
     <main class="flex-shrink-0">
        <div class="container">
-           <h1 class="mt-5">Home</h1>
-           <p class="lead">Text</p>
+           <div class="row row-cols-1 row-cols-lg-2">
+               <div class="col order-last order-lg-first">
+                    <h1 class="mt-5">Looper: A Coding Project By Mike Loerop</h1>
+                    <h4 class="lead">Description</h4>
+                    <ul class="fa-ul pt-2 checklist">
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS & Boostrap Layout</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Loops</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Functions</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript DOM Manipulation</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript If/Then/Else</li>
+                        <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Boolean Logic</li>
+                    </ul>
+
+                    <h5 class="fw-bold mt-5">
+                        <div class="">
+                            <div class="row row-cols-4 m-5">
+                                <div class="col"><i class="fab fa-js fa-4x jsicon"></i></div>
+                                <div class="col"><i class="fab fa-bootstrap fa-4x bsicon"></i></div>
+                                <div class="col"><i class="fab fa-html5 fa-4x html5icon"></i></div>
+                                <div class="col"><i class="fab fa-css3-alt fa-4x css3icon"></i></div>
+                            </div>
+                        </div>
+                    </h5>
+               </div>
+               
+               <div class="col">
+                   <img src="/img/Looper.gif" alt="Looper Logo" class="image-fluid" width="100%">
+                </div>
+           </div>
        </div>
     </main>
 
     <!-- Footer -->
-    <footer class="footer mt-auto py-3">
+    <footer class="footer mt-auto py-3 bg-dark">
         <div class="container-fluid">
             <div class="row row-cols-1 row-cols-lg-3 gy-2">
                 <div class="col text-light d-flex align-items-center justify-content-center justify-content-lg-start order-last order-lg-first">
                     <div>&copy;2021 Mike Loerop</div>
                 </div>
                 <div class="col d-flex align-items-center justify-content-center justify-content-lg-center">
-                    <img src="/img/Logo-darkmode-SM.png" alt="Michael Loerop Logo" height="50">
+                    <img src="/img/Mike-Loerop-Logo-darkmode-SM.png" alt="Michael Loerop Logo" height="50">
                 </div>
                 <div class="col d-flex align-items-center justify-content-center justify-content-lg-end">
                     <div class="row">
